# glproj

cpp-opengl-learnopengl/: CMakeLists.txt  main.cpp
cpp-opengl-learnopengl/include/: Camera.hpp  Cube.hpp  Event.hpp  Logger.hpp  OpenGLBuffer.hpp  Rectangle.hpp  Shader.hpp  ShaderCollection.hpp  String.hpp  Texture.hpp  Window.hpp
cpp-opengl-learnopengl/include/Core/: Timer.hpp
cpp-opengl-learnopengl/include/LightObjects/: PointLight.hpp
cpp-opengl-learnopengl/include/Platform/: LinuxX11.hpp  X11.hpp
cpp-opengl-learnopengl/include/glad/: glad.h
cpp-opengl-learnopengl/shader/: Basic.frag  Basic.vert  BasicWithoutTexture.frag  BasicWithoutTexture.vert  DirectionalLight.frag  Light.frag  Light.vert
cpp-opengl-learnopengl/src/: Camera.cpp  Cube.cpp  Logger.cpp  OpenGLBuffer.cpp  Rectangle.cpp  Shader.cpp  ShaderCollection.cpp  String.cpp  Texture.cpp  Window.cpp  glad.c
cpp-opengl-learnopengl/src/Core/: Timer.cpp
cpp-opengl-learnopengl/src/LightObjects/: PointLight.cpp
cpp-opengl-learnopengl/src/Platform/: LinuxX11.cpp
xengine/: CMakeLists.txt  garbage  main.cpp
xengine/include/: Event.h  Logger.h  String.h  Window.h
xengine/include/Platform/: LinuxX11.h
xengine/include/glad/: gl.h  glx.h
xengine/src/: Event.cpp  Logger.cpp  String.cpp  Window.cpp  gl.c
xengine/src/Platform/: LinuxX11.cpp
